[gd_scene load_steps=12 format=2]

[ext_resource path="res://Script/ui/Options.gd" type="Script" id=1]
[ext_resource path="res://Assets/fonts/Extrude.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://Assets/sfx/Ui-Navigate.wav" type="AudioStream" id=3]
[ext_resource path="res://Assets/sfx/Ui-Select.wav" type="AudioStream" id=4]
[ext_resource path="res://Assets/sfx/Ui-Back.wav" type="AudioStream" id=5]

[sub_resource type="DynamicFont" id=1]
size = 69
font_data = ExtResource( 2 )

[sub_resource type="StyleBoxEmpty" id=2]

[sub_resource type="DynamicFont" id=3]
size = 32
font_data = ExtResource( 2 )

[sub_resource type="StyleBoxEmpty" id=4]

[sub_resource type="StyleBoxEmpty" id=5]

[sub_resource type="StyleBoxEmpty" id=6]

[node name="Options" type="MarginContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="."]
margin_right = 1024.0
margin_bottom = 600.0
color = Color( 0.286275, 0.0980392, 0.0980392, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="CenterContainer" parent="."]
margin_right = 1024.0
margin_bottom = 600.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
margin_left = 326.0
margin_top = 170.0
margin_right = 698.0
margin_bottom = 430.0
custom_constants/separation = 20

[node name="CenterContainer" type="CenterContainer" parent="CenterContainer/VBoxContainer"]
margin_right = 372.0
margin_bottom = 70.0

[node name="Title" type="Label" parent="CenterContainer/VBoxContainer/CenterContainer"]
margin_left = 48.0
margin_right = 324.0
margin_bottom = 70.0
custom_fonts/font = SubResource( 1 )
text = "OPTIONS"

[node name="CenterContainer2" type="CenterContainer" parent="CenterContainer/VBoxContainer"]
margin_top = 90.0
margin_right = 372.0
margin_bottom = 260.0

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer/VBoxContainer/CenterContainer2"]
margin_right = 372.0
margin_bottom = 170.0

[node name="CenterContainer3" type="CenterContainer" parent="CenterContainer/VBoxContainer/CenterContainer2/VBoxContainer"]
margin_right = 372.0
margin_bottom = 40.0

[node name="HBoxContainer" type="HBoxContainer" parent="CenterContainer/VBoxContainer/CenterContainer2/VBoxContainer/CenterContainer3"]
margin_left = 2.0
margin_right = 370.0
margin_bottom = 40.0

[node name="SfxToggle" type="CheckButton" parent="CenterContainer/VBoxContainer/CenterContainer2/VBoxContainer/CenterContainer3/HBoxContainer"]
margin_right = 368.0
margin_bottom = 40.0
custom_styles/focus = SubResource( 2 )
custom_fonts/font = SubResource( 3 )
text = "SOUND EFFECTS     "
flat = true

[node name="CenterContainer2" type="CenterContainer" parent="CenterContainer/VBoxContainer/CenterContainer2/VBoxContainer"]
margin_top = 44.0
margin_right = 372.0
margin_bottom = 84.0

[node name="HBoxContainer" type="HBoxContainer" parent="CenterContainer/VBoxContainer/CenterContainer2/VBoxContainer/CenterContainer2"]
margin_right = 372.0
margin_bottom = 40.0

[node name="MusicToggle" type="CheckButton" parent="CenterContainer/VBoxContainer/CenterContainer2/VBoxContainer/CenterContainer2/HBoxContainer"]
margin_right = 372.0
margin_bottom = 40.0
custom_styles/focus = SubResource( 4 )
custom_fonts/font = SubResource( 3 )
text = "MUSIC VOLUME       "
flat = true

[node name="CenterContainer4" type="CenterContainer" parent="CenterContainer/VBoxContainer/CenterContainer2/VBoxContainer"]
margin_top = 88.0
margin_right = 372.0
margin_bottom = 128.0

[node name="HBoxContainer" type="HBoxContainer" parent="CenterContainer/VBoxContainer/CenterContainer2/VBoxContainer/CenterContainer4"]
margin_left = 50.0
margin_right = 322.0
margin_bottom = 40.0

[node name="ShadowsToggle" type="CheckButton" parent="CenterContainer/VBoxContainer/CenterContainer2/VBoxContainer/CenterContainer4/HBoxContainer"]
margin_right = 272.0
margin_bottom = 40.0
custom_styles/focus = SubResource( 5 )
custom_fonts/font = SubResource( 3 )
text = "SHADOWS     "
flat = true

[node name="CenterContainer" type="CenterContainer" parent="CenterContainer/VBoxContainer/CenterContainer2/VBoxContainer"]
margin_top = 132.0
margin_right = 372.0
margin_bottom = 170.0

[node name="HBoxContainer" type="HBoxContainer" parent="CenterContainer/VBoxContainer/CenterContainer2/VBoxContainer/CenterContainer"]
margin_left = 142.0
margin_right = 230.0
margin_bottom = 38.0

[node name="Back" type="Button" parent="CenterContainer/VBoxContainer/CenterContainer2/VBoxContainer/CenterContainer/HBoxContainer"]
margin_right = 88.0
margin_bottom = 38.0
custom_styles/focus = SubResource( 6 )
custom_fonts/font = SubResource( 3 )
text = "back"
flat = true

[node name="NavigateSfx" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )

[node name="SelectSfx" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )

[node name="BackSfx" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )

[connection signal="gui_input" from="CenterContainer/VBoxContainer/CenterContainer2/VBoxContainer/CenterContainer3/HBoxContainer/SfxToggle" to="." method="_on_SfxToggle_gui_input"]
[connection signal="mouse_entered" from="CenterContainer/VBoxContainer/CenterContainer2/VBoxContainer/CenterContainer3/HBoxContainer/SfxToggle" to="." method="_on_SfxToggle_mouse_entered"]
[connection signal="toggled" from="CenterContainer/VBoxContainer/CenterContainer2/VBoxContainer/CenterContainer3/HBoxContainer/SfxToggle" to="." method="_on_SfxToggle_toggled"]
[connection signal="gui_input" from="CenterContainer/VBoxContainer/CenterContainer2/VBoxContainer/CenterContainer2/HBoxContainer/MusicToggle" to="." method="_on_MusicToggle_gui_input"]
[connection signal="mouse_entered" from="CenterContainer/VBoxContainer/CenterContainer2/VBoxContainer/CenterContainer2/HBoxContainer/MusicToggle" to="." method="_on_MusicToggle_mouse_entered"]
[connection signal="toggled" from="CenterContainer/VBoxContainer/CenterContainer2/VBoxContainer/CenterContainer2/HBoxContainer/MusicToggle" to="." method="_on_MusicToggle_toggled"]
[connection signal="gui_input" from="CenterContainer/VBoxContainer/CenterContainer2/VBoxContainer/CenterContainer4/HBoxContainer/ShadowsToggle" to="." method="_on_ShadowsToggle_gui_input"]
[connection signal="mouse_entered" from="CenterContainer/VBoxContainer/CenterContainer2/VBoxContainer/CenterContainer4/HBoxContainer/ShadowsToggle" to="." method="_on_ShadowsToggle_mouse_entered"]
[connection signal="toggled" from="CenterContainer/VBoxContainer/CenterContainer2/VBoxContainer/CenterContainer4/HBoxContainer/ShadowsToggle" to="." method="_on_ShadowsToggle_toggled"]
[connection signal="gui_input" from="CenterContainer/VBoxContainer/CenterContainer2/VBoxContainer/CenterContainer/HBoxContainer/Back" to="." method="_on_Back_gui_input"]
[connection signal="mouse_entered" from="CenterContainer/VBoxContainer/CenterContainer2/VBoxContainer/CenterContainer/HBoxContainer/Back" to="." method="_on_Back_mouse_entered"]
